rendered/envs/alpha/it-tools/deployment-it-tools.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: it-tools
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: it-tools
  template:
    metadata:
      labels:
        app.kubernetes.io/name: it-tools
    spec:
      containers:
        - image: oci.zebradil.dev/ghcr.io-cache/corentinth/it-tools@sha256:4aaf67eab769afc9dac5614a15614537446e11150d53eab3be34ac9775a27e3a
          name: it-tools
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_BIND_SERVICE
                - CHOWN
                - SETGID
                - SETUID
              drop:
                - all
            privileged: false
